--- a/docker-compose.backend.yml
+++ b/docker-compose.backend.yml
@@ -24,7 +24,7 @@ services:
       - SUPABASE_DB_DATABASE=${SUPABASE_DB_DATABASE:-postgres}
       - SUPABASE_DB_USER=${SUPABASE_DB_USER}
       - SUPABASE_DB_PASSWORD=${SUPABASE_DB_PASSWORD}
-      - NEXTAUTH_URL=https://s42v3.edbmotte.com
+      - NEXTAUTH_URL=${NEXTAUTH_URL}
       - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:4000/api/health || exit 1"]
