Fix Docker build by adding required environment variables for Next.js build
- Add ARG declarations for non-sensitive build-time environment variables
- Set ENV variables during builder stage for Next.js compilation
- This allows the build to complete successfully in Docker

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -16,7 +16,19 @@ WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
+# Environment variables needed for build
 ENV NEXT_TELEMETRY_DISABLED=1
+ENV NODE_ENV=production
+
+# Basic environment variables for Next.js build
+ARG NEXT_PUBLIC_SUPABASE_URL
+ARG NEXT_PUBLIC_SUPABASE_ANON_KEY
+ARG NEXTAUTH_URL
+
+ENV NEXT_PUBLIC_SUPABASE_URL=$NEXT_PUBLIC_SUPABASE_URL
+ENV NEXT_PUBLIC_SUPABASE_ANON_KEY=$NEXT_PUBLIC_SUPABASE_ANON_KEY
+ENV NEXTAUTH_URL=$NEXTAUTH_URL
+
 # Build for API-only mode
 RUN npm run build
 
