--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -33,7 +33,7 @@ ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
 
 RUN npm run build
 
-# Production image, copy all the files and run next
+# Production image for standalone Next.js application
 FROM base AS runner
 WORKDIR /app
 
@@ -48,8 +48,7 @@ RUN apk add --no-cache curl
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
-# Copy the built application
-COPY --from=builder /app/public ./public
+# Copy the entire standalone build
 COPY --from=builder /app/.next/standalone ./
 COPY --from=builder /app/.next/static ./.next/static
 
@@ -60,5 +59,5 @@ USER nextjs
 
 EXPOSE 3000
 
-# Start the frontend server
+# Start the standalone server
 CMD ["node", "server.js"]
