Add debug output to Dockerfile to identify build failure cause
- Add verbose flag to npm run build
- Print environment variables during build for debugging
- This will help identify why the build fails in Docker but works locally

--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -31,7 +31,13 @@ ENV NEXT_PUBLIC_SUPABASE_ANON_KEY=$NEXT_PUBLIC_SUPABASE_ANON_KEY
 ENV NEXTAUTH_URL=$NEXTAUTH_URL
 ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
 
-RUN npm run build
+# Debug: Print environment variables
+RUN echo "NEXT_PUBLIC_SUPABASE_URL: $NEXT_PUBLIC_SUPABASE_URL" && \
+    echo "NEXT_PUBLIC_SUPABASE_ANON_KEY: $NEXT_PUBLIC_SUPABASE_ANON_KEY" && \
+    echo "NEXTAUTH_URL: $NEXTAUTH_URL" && \
+    echo "NEXT_PUBLIC_API_URL: $NEXT_PUBLIC_API_URL"
+
+RUN npm run build --verbose
 
 # Production image for standalone Next.js application
 FROM base AS runner
