Fix Docker build by replacing @/lib imports with relative paths
- Replace all '@/lib/*' imports with relative paths to fix module resolution in Docker
- Fixed imports in API routes, pages, components, and actions files
- Removed debug output from Dockerfile
- This resolves the 'Module not found' errors during Next.js build in Docker

--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -31,13 +31,7 @@ ENV NEXT_PUBLIC_SUPABASE_ANON_KEY=$NEXT_PUBLIC_SUPABASE_ANON_KEY
 ENV NEXTAUTH_URL=$NEXTAUTH_URL
 ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
 
-# Debug: Print environment variables
-RUN echo "NEXT_PUBLIC_SUPABASE_URL: $NEXT_PUBLIC_SUPABASE_URL" && \
-    echo "NEXT_PUBLIC_SUPABASE_ANON_KEY: $NEXT_PUBLIC_SUPABASE_ANON_KEY" && \
-    echo "NEXTAUTH_URL: $NEXTAUTH_URL" && \
-    echo "NEXT_PUBLIC_API_URL: $NEXT_PUBLIC_API_URL"
-
-RUN npm run build --verbose
+RUN npm run build
 
 # Production image for standalone Next.js application
 FROM base AS runner
